tried to fix zooming  and dragging on mobile

--- a/Styles/mainPage.css
+++ b/Styles/mainPage.css
@@ -5,12 +5,13 @@ body
     -moz-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
+    margin: 0;
 }
 
 .canvasDiv
 {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 90%;
     background-color: black;
     display: flex;
